[package]
name = "openpgp-parser"
version = "0.2.2"
authors = ["Demi Marie Obenour <demi@invisiblethingslab.com>"]
# edition = "2018"
license = "MIT OR Apache-2.0"
build = "../rpm-parser/build.rs"

[dependencies]
[features]
std = ["alloc"]
alloc = []
bin = []

[[bin]]
name = "sigparse"
path = "bin/sigparse.rs"
required-features = ["bin"]
