[package]
name = "rpm-writer"
version = "0.2.2"
authors = ["Demi Marie Obenour <demi@invisiblethingslab.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"

[dependencies]
rpm-parser = { version = "0.2.2", path = "../rpm-parser" }
rpm-crypto = { version = "0.2.2", path = "../rpm-crypto" }
openpgp-parser = { version = "0.2.2", path = "../openpgp-parser" }
libc = "0.2"

[features]
bin = []

[[bin]]
name = "rpmcanon"
path = "bin/rpmcanon.rs"
required-features = ["bin"]
